@@ -1,15 +1,17 @@
 package com.globeot.globeotback.auth.jwt;
 
 import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
 import java.util.Collections;
+import java.util.List;
 
 public class JwtAuthentication extends AbstractAuthenticationToken {
 
     private final Long userId;
 
     public JwtAuthentication(Long userId) {
-        super(Collections.emptyList());
+        super(List.of(new SimpleGrantedAuthority("ROLE_USER")));
         this.userId = userId;
         setAuthenticated(true);
     }
@@ -22,6 +24,11 @@ public class JwtAuthentication extends AbstractAuthenticationToken {
     @Override
     public Object getPrincipal() {
         return userId;
+    }
+
+    @Override
+    public String getName() {
+        return String.valueOf(userId);
     }
 
     public Long getUserId() {
